force-app/main/default/objects/User/fields/BOFE_Deputy__c.field-meta.xml
<CustomField>
    <fullName>BOFE_Deputy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BOFE Deputy</label>
    <type>Checkbox</type>
</CustomField>