force-app/main/default/objects/User/fields/CalAtlas_Business_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>CalAtlas_Business_Team_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will identify if the User is part of the CalAtlas Business Team used in the Service Management Application to automate process.</description>
    <label>CalAtlas Business Team Member</label>
    <type>Checkbox</type>
</CustomField>