force-app/main/default/objects/User/fields/Date_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Date_Frozen__c</fullName>
    <description>Field updated by flow 90 days after last login</description>
    <label>Date Frozen</label>
    <type>Date</type>
</CustomField>