force-app/main/default/objects/User/fields/Deputy_Labor_Commissioner__c.field-meta.xml
<CustomField>
    <fullName>Deputy_Labor_Commissioner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deputy Labor Commissioner</label>
    <type>Checkbox</type>
</CustomField>