force-app/main/default/objects/User/fields/Disbursement_Clerk__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Clerk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disbursement Clerk</label>
    <type>Checkbox</type>
</CustomField>