force-app/main/default/objects/User/fields/FLC_Instructor__c.field-meta.xml
<CustomField>
    <fullName>FLC_Instructor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Farm Labor Contractor Instructor.  Designates the Community User as an instructor so they can manage FLC classes through Registration Services community site.</description>
    <label>FLC Instructor</label>
    <type>Checkbox</type>
</CustomField>