force-app/main/default/objects/User/fields/Is_Hearing_Officer_del__c.field-meta.xml
<CustomField>
    <fullName>Is_Hearing_Officer_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hearing Officer</label>
    <type>Checkbox</type>
</CustomField>