force-app/main/default/objects/User/fields/isSME__c.field-meta.xml
<CustomField>
    <fullName>isSME__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in a flow to automatically activate a user when a sandbox is refreshed. This includes SME and BA.</description>
    <inlineHelpText>This field is used in a flow to automatically activate a user when a sandbox is refreshed. This includes SME and BA.</inlineHelpText>
    <label>isSME</label>
    <type>Checkbox</type>
</CustomField>