force-app/main/default/objects/User/fields/Loop__LOOPlus_Tester__c.field-meta.xml
<CustomField>
    <fullName>Loop__LOOPlus_Tester__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will allow this user to run DocGen Packages on the Nintex DocGen next-release environment when it is available for testing.</inlineHelpText>
    <label>DocGen Next Release Test User</label>
    <type>Checkbox</type>
</CustomField>