force-app/main/default/objects/User/fields/management_approval__c.field-meta.xml
<CustomField>
    <fullName>management_approval__c</fullName>
    <label>Management Approval</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>