force-app/main/default/objects/User/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Senior Deputy</fullName>
            </value>
            <value>
                <fullName>Deputy</fullName>
            </value>
            <value>
                <fullName>Clerk</fullName>
            </value>
            <value>
                <fullName>Hearing Officer</fullName>
            </value>
            <value>
                <fullName>Cashiering</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>JEU</fullName>
            </value>
            <value>
                <fullName>CIU</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Registration_Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>