force-app/main/default/objects/User/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regional Manager</label>
    <type>Checkbox</type>
</CustomField>