force-app/main/default/objects/User/fields/Senior_Deputy_Labor_Commissioner__c.field-meta.xml
<CustomField>
    <fullName>Senior_Deputy_Labor_Commissioner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Deputy Labor Commissioner</label>
    <type>Checkbox</type>
</CustomField>