force-app/main/default/objects/User/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Abbreviations</valueSetName>
    </valueSet>
</CustomField>