force-app/main/default/objects/User/fields/UserName_Exclude_Online_Claim_prefix__c.field-meta.xml
<CustomField>
    <fullName>UserName_Exclude_Online_Claim_prefix__c</fullName>
    <formula>IF(CONTAINS(Username,'.oc') ,  SUBSTITUTE(Username, '.oc','')  , Username)</formula>
    <label>UserName (Exclude Online Claim prefix)</label>
    <type>Text</type>
</CustomField>