force-app/main/default/objects/User/listViews/Active_Users_DLSE.listView-meta.xml
<ListView>
    <fullName>Active_Users_DLSE</fullName>
    <booleanFilter>(1 AND 2) or (1 AND 3) or (1 AND 4)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.PHONE</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>WCA User</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>BOFE User</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>DLSE Restricted User</value>
    </filters>
    <label>Active Users DLSE</label>
</ListView>